--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h3>Các lĩnh vực của AI
             </h3>
 
-            <img src="https://scontent.fdad1-3.fna.fbcdn.net/v/t39.30808-6/273403589_1269450310133418_2927712718260712508_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=e3f864&_nc_ohc=kpl6r7W7rbQAX9BgMZy&_nc_ht=scontent.fdad1-3.fna&oh=00_AfClGEaoHtE25yztraomVqFJj6tDGIcBwmjHCJu7IwcwqQ&oe=638539F2"
+            <img src="./assets/img/img1.jpg"
                 width="100%" alt="">
 
         </div>
@@ -209,7 +209,8 @@
                         </li>
                     </ul>
 
-                    <video src="./Video Cinematic 30s.mp4" controls></video>
+                    <video src="./assets/video/Video Cinematic 30s.mp4" controls></video>
+                    <video width="100%" src="https://dataqq.net/v/tvcsbotop1.mp4" type="video/mp4" controls></video>
 
                       <iframe width="1002" height="426" src="https://www.youtube.com/embed/j_zygB18IMI" title="Video Cinematic 30s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </li>
