--- a/assets/Buoi2/index.html
+++ b/assets/Buoi2/index.html
@@ -50,7 +50,9 @@
 
             <div class="aboutme">
                 <span class="about">ABOUT ME</span>
-                <p class="about_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, saepe eos labore tempore illo ipsa modi molestiae fuga quibusdam inventore corrupti quos soluta error deleniti. Assumenda veniam iusto id autem.</p>
+                <p class="about_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, saepe eos
+                    labore tempore illo ipsa modi molestiae fuga quibusdam inventore corrupti quos soluta error
+                    deleniti. Assumenda veniam iusto id autem.</p>
             </div>
         </div>
 
