--- a/assets/Buoi3/index.html
+++ b/assets/Buoi3/index.html
@@ -101,7 +101,7 @@
                     </p>
                     <ul class="list_content">
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit facere error illum mollitia
-                            labore tempora</li>
+                        .</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
                     </ul>
                 </div>
@@ -115,9 +115,9 @@
                         perferendis molestiae.
                     </p>
                     <ul class="list_content">
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit facere error illum mollitia labore tempora</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit facere error illum mollitia.</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit facere error illum mollitia labore tempora</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit facere error illum mollitia.</li>
                     </ul>
                 </div>
             </div>
