--- a/assets/Buoi3/index.html
+++ b/assets/Buoi3/index.html
@@ -182,7 +182,7 @@
             <span>Ready to talk?</span>
             <p class="contact">Feel free to contact us</p>
             <a href="#">LETS TALK</a>
-            <p class="copyright">© 2022 All rights reserved. Free minimal bootstrap template <br> by Designstub</p>
+            <p class="copyright">© 2022 All rights reserved. Free minimal bootstrap template by Designstub</p>
         </div>
         </div>
 
