--- a/assets/Buoi4/index.html
+++ b/assets/Buoi4/index.html
@@ -15,10 +15,9 @@
         }
 
         img {
-            display: block;
             width: 500px;
             height: 500px;
-            object-fit: contain;
+            object-fit: cover;
             border: 2px solid red;
             margin-left: 50%;
             margin-top: 50%;
@@ -28,9 +27,11 @@
 </head>
 
 <body>
-    <div class="box">
-        <img src="/assets/img/helloMobileApp.jpg" alt="">
-    </div>
+    <center>
+        <div class="box">
+            <img src="/assets/img/helloMobileApp.jpg" alt="">
+        </div>
+    </center>
 </body>
 
 </html>
